# physical_Ai_Hackathon1

./: .env.example  .gitignore  README.md  base64_feature.txt  docusaurus.config.js  feature_description.txt  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  sidebars.js  test_agent_conversion.py  test_async_handling.py  test_new_rag_agent.py  test_rag_agent_functionality.py  test_rag_agent_parameters.py  test_response_issue.py  test_retrieval_functionality.py
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
backend/: main.py
backend/rag_agent/: README.md  mock_retrieval_tool.py  rag_agent.py  retrieval_tool.py  test_agent.py  test_mock_agent.py
capstone_project/: full_humanoid_task.py
docs/: contributing.md  intro.md  pipeline-guide.md
docs/ai_perception_navigation/: _category_.json  isaac_ros_pipelines.md  isaac_sim_overview.md  overview.md
docs/capstone/: _category_.json  autonomous_humanoid.md  overview.md
docs/foundations/: _category_.json  diagrams.md  overview.md  physical_ai.md
docs/simulation/: _category_.json  gazebo_basics.md  overview.md  unity_robotics.md
docs/systems/: _category_.json  overview.md  ros2_intro.md  urdf_control.md
docs/vision_language_action/: _category_.json  multimodal_interaction.md  overview.md  whisper_llm.md
server/: index.js  package-lock.json  package.json
sidra hackthon final/.docusaurus/: registry.js  routes.js  routesChunkNames.json
specs/001-humanoid-robotics-capstone/: plan.md  research.md  spec.md  tasks.md
specs/002-book-embeddings-qdrant/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-rag-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/HomepageFeatures/: chatbot.js  index.html  index.js
src/cli/: main.py
src/css/: custom.css
src/isaac_humanoid_navigation/: package.xml
src/isaac_humanoid_perception/: package.xml
src/models/: book_page.py  embedding.py  metadata.py  pipeline_job.py  text_chunk.py
src/pages/: chat.js  chat.module.css  index.js
tests/: test_pipeline_validation.py
(+88 files in other folders)
